@@ -1,6 +1,6 @@
 <?php
 /*
- * $Header: /cvsroot/nocc/nocc/webmail/class_smtp.php,v 1.18 2001/05/27 11:10:26 wolruf Exp $
+ * $Header: /cvsroot/nocc/nocc/webmail/class_smtp.php,v 1.19 2001/06/18 13:43:19 nicocha Exp $
  *
  * Copyright 2001 Nicolas Chalanset <nicocha@free.fr>
  * Copyright 2001 Olivier Cahagne <cahagn_o@epita.fr>
@@ -10,6 +10,8 @@
  *
  * Class based on a work from Unk <rgroesb_garbage@triple-it_garbage.nl>  
  */
+
+require_once ("PEAR.php");
 
 class smtp
 {
@@ -40,12 +42,14 @@ class smtp
         global $SMTP_GLOBAL_STATUS; 
 
         $smtp = fsockopen($this->smtp_server, $this->port); 
-        if ($smtp < 0) return 0; 
+		if ($smtp < 0)
+			return new PEAR_Error($html_smtp_no_conn); 
         $line = fgets($smtp, 1024);
         $SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] = substr($line, 0, 1); 
         $SMTP_GLOBAL_STATUS[$smtp]['LASTRESULTTXT'] = substr($line, 0, 1024); 
 
-        if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] !=  '2') return 0; 
+		if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] !=  '2')
+			return new PEAR_Error($html_smtp_error_unexpected." ".$line); 
 		
         return $smtp; 
 	} 
@@ -56,14 +60,17 @@ class smtp
 
          /* 'localhost' always works [Unk] */ 
         fputs($smtp, "helo localhost\r\n"); 
+		error_log("Sent: helo localhost");
         $line = fgets($smtp, 1024); 
+		error_log("Rcvd: $line");
 
         $SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] = substr($line, 0, 1); 
         $SMTP_GLOBAL_STATUS[$smtp]['LASTRESULTTXT'] = substr($line, 0, 1024); 
 
-        if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] !=  '2') return 0; 
+		if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] !=  '2')
+			return new PEAR_Error($html_smtp_error_unexpected." ".$line); 
 		
-        return 1;
+		return (true);
 	} 
   
 	function smtp_ehlo($smtp) 
@@ -74,13 +81,16 @@ class smtp
           extra func's   [Unk] 
         */ 
         fputs($smtp, "ehlo localhost\r\n"); 
+		error_log("Sent: ehlo localhost");
         $line = fgets($smtp, 1024);
+		error_log("Rcvd: $line");
         $SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] = substr($line, 0, 1); 
         $SMTP_GLOBAL_STATUS[$smtp]['LASTRESULTTXT'] = substr($line, 0, 1024); 
 
-        if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] <>  '2') return 0; 
+		if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] <>  '2')
+			return new PEAR_Error($html_smtp_error_unexpected." ".$line); 
 
-        return 1; 
+		return (true); 
 	} 
 
 
@@ -88,48 +98,67 @@ class smtp
 	{ 
         global $SMTP_GLOBAL_STATUS; 
         fputs($smtp, "MAIL FROM:$this->from\r\n"); 
+		error_log("Sent: MAIL FROM:$this->from");
         $line = fgets($smtp, 1024);
+		error_log("Rcvd: $line");
 
 		$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] = substr($line, 0, 1); 
         $SMTP_GLOBAL_STATUS[$smtp]['LASTRESULTTXT'] = substr($line, 0, 1024); 
 
-        if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] <>  '2') return 0; 
+		if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] <>  '2')
+			return new PEAR_Error($html_smtp_error_unexpected." ".$line); 
 		
-        return 1; 
+		return (true); 
 	} 
   
 	function smtp_rcpt_to($smtp) 
 	{ 
         global $SMTP_GLOBAL_STATUS; 
+
 		// Modified by nicocha to use to, cc and bcc field
 		while ($tmp = array_shift($this->to))
 		{
+			if($tmp == '')
+				continue;
 			fputs($smtp, "RCPT TO:$tmp\r\n");
+			error_log("Sent: RCPT TO:$tmp");
 			$line = fgets($smtp, 1024);
+			error_log("Rcvd: $line");
 
 			$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] = substr($line, 0, 1); 
 			$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULTTXT'] = substr($line, 0, 1024); 
-			if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] !=  '2') return 0;
+			if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] <>  '2')
+				return new PEAR_Error($html_smtp_error_unexpected." ".$line); 
 		}
 		while ($tmp = array_shift($this->cc))
 		{
+			if($tmp == '')
+				continue;
 			fputs($smtp, "RCPT TO:$tmp\r\n");
+			error_log("Sent: RCPT TO:$tmp");
 			$line = fgets($smtp, 1024);
+			error_log("Rcvd: $line");
 		    $SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] = substr($line, 0, 1); 
 			$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULTTXT'] = substr($line, 0, 1024); 
 
-			if ($SMTP_GLOBAL_STATUS[$smtp]["LASTRESULT"] !=  "2") return 0;
+			if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] <>  '2')
+				return new PEAR_Error($html_smtp_error_unexpected." ".$line); 
 		}
 		while ($tmp = array_shift($this->bcc))
 		{
+			if($tmp == '')
+				continue;
 			fputs($smtp, "RCPT TO:$tmp\r\n"); 
+			error_log("Sent: RCPT TO:$tmp");
 			$line = fgets($smtp, 1024);
+			error_log("Rcvd: $line");
 		    $SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] = substr($line, 0, 1); 
 			$SMTP_GLOBAL_STATUS[$smtp]['LASTRESULTTXT'] = substr($line, 0, 1024); 
 
-			if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] !=  '2') return 0;
+			if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] <>  '2')
+				return new PEAR_Error($html_smtp_error_unexpected." ".$line); 
 		}
-        return 1; 
+		return (true); 
 	} 
 
 	function smtp_data($smtp) 
@@ -137,20 +166,24 @@ class smtp
         global $SMTP_GLOBAL_STATUS; 
 
         fputs($smtp, "DATA\r\n"); 
+		error_log("Sent: DATA");
         $line = fgets($smtp, 1024);
+		error_log("Rcvd: $line");
 
         $SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] = substr($line, 0, 1); 
         $SMTP_GLOBAL_STATUS[$smtp]['LASTRESULTTXT'] = substr($line, 0, 1024); 
 
-        if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] !=  '3') return 0; 
+		if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] <>  '3')
+			return new PEAR_Error($html_smtp_error_unexpected." ".$line); 
 		
 		fputs($smtp, "$this->data"); 
         fputs($smtp, "\r\n.\r\n"); 
         $line = fgets($smtp, 1024); 
+		error_log("Rcvd: $line");
         if (substr($line, 0, 1) !=  '2')
-			return 0;  
+			return new PEAR_Error($html_smtp_error_unexpected." ".$line); 
 
-        return 1; 
+		return (true); 
 	} 
   
 	function smtp_quit($smtp) 
@@ -158,30 +191,39 @@ class smtp
         global $SMTP_GLOBAL_STATUS; 
 
         fputs($smtp,  "QUIT\r\n"); 
+		error_log("Sent: QUIT");
         $line = fgets($smtp, 1024);
+		error_log("Rcvd: $line");
 
         $SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] = substr($line, 0, 1); 
         $SMTP_GLOBAL_STATUS[$smtp]['LASTRESULTTXT'] = substr($line, 0, 1024); 
 
-        if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] !=  '2') return 0; 
+		if ($SMTP_GLOBAL_STATUS[$smtp]['LASTRESULT'] !=  '2')
+			return new PEAR_Error($html_smtp_error_unexpected." ".$line); 
 
-        return 1; 
+		return (true); 
 	} 
 
 	function send()
 	{
-		if (($smtp = $this->smtp_open()) == 0)
-			return (-1);
-		if (($this->smtp_helo($smtp)) == 0)
-			return (-2);
-		if (($this->smtp_mail_from($smtp)) == 0)
-			return (-3);
-		if (($this->smtp_rcpt_to($smtp)) == 0)
-			return (-4);
-		if (($this->smtp_data($smtp)) == 0)
-			return (-5);
-		if (($this->smtp_quit($smtp)) == 0)
-			return (-6);
+		$smtp = $this->smtp_open();
+		if(PEAR::isError($smtp))
+			return $smtp;
+		$ev = $this->smtp_helo($smtp);
+		if(PEAR::isError($ev))
+			return $ev;
+		$ev = $this->smtp_mail_from($smtp);
+		if(PEAR::isError($ev))
+			return $ev;
+		$ev = $this->smtp_rcpt_to($smtp);
+		if(PEAR::isError($ev))
+			return $ev;
+		$ev = $this->smtp_data($smtp);
+		if(PEAR::isError($ev))
+			return $ev;
+		$ev = $this->smtp_quit($smtp);
+		if(PEAR::isError($ev))
+			return $ev;
 		return (true);
 	}
 }
